--- a/public/styles/animate.css
+++ b/public/styles/animate.css
@@ -1236,7 +1236,7 @@
   }
 }
 
-.fadeIn {
+.fadeIn.ng-enter {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
 }
@@ -1525,7 +1525,7 @@
   }
 }
 
-.fadeOut {
+.fadeOut.ng-leave {
   -webkit-animation-name: fadeOut;
   animation-name: fadeOut;
 }
